# VerityAI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.claude/agents/: evidence-auditor.md
.github/workflows/: ci.yml
docker/: docker-compose.yml
docs/: CASE_STUDY.md  EVIDENCE_COVERAGE.md  PHASE_0_SETUP.md  PHASE_2_REVIEW.md  PHASE_3_METHODOLOGY.md  PHASE_4_PART_A.md  PHASE_4_PART_B.md  PHASE_4_PART_C.md  PHASE_4_PART_D.md  RESEARCH_FINDINGS.md  T5_HUMAN_EVAL_PROTOCOL.md  VERIFICATION_SCOPE.md
docs/adr/: 0001-verifiable-python-subset.md  0002-parameterized-verification.md  0003-hybrid-retrieval.md
docs/evidence/: manifest.json
docs/results/: 2026-07-13_cross_model_run.json  2026-07-14_retrieval_ab.json  2026-07-15_corpus_ablation.json  2026-07-15_evidence_coverage.json  2026-07-15_evidence_fetch.json  2026-07-15_repeat_validation.json  2026-07-15_t1_t2_analysis.json  2026-07-15_t3_subset_coverage.json  2026-07-16_evidence_coverage.json
scripts/: analyze_confidence_calibration.py  backfill_rule_embeddings.py  classify_evidence.py  fetch_evidence.py  generate_human_eval_materials.py  ingest_seed_data.py  report_evidence_coverage.py  run_repeat_validation.py  run_retrieval_ab.py  run_rule_corpus_ablation.py  run_t3_subset_coverage.py  setup.py
src/verityai/: __init__.py  sdk.py
tests/: __init__.py  conftest.py  fakes.py
tests/integration/: test_benchmark_ground_truth.py  test_continuous_learning_e2e.py  test_evaluation_e2e.py  test_latency_e2e.py  test_orchestrator_e2e.py  test_security_pentest.py  test_week2_e2e.py  test_week3_e2e.py  test_week4_e2e.py
tests/unit/: __init__.py  test_agent_state.py  test_api.py  test_ast_extended.py  test_audit_log.py  test_baselines.py  test_cli.py  test_confidence.py  test_continuous_learning.py  (+41 more)
(+1268 files in other folders)
